# UWallet

./: Cargo.toml  README.md  rust-toolchain.toml
chain/polkadot/: Cargo.toml
chain/polkadot/src/: keys.rs  lib.rs
chain/polkadot/src/rpc/: client.rs  mod.rs  storage.rs  types.rs
create/coreui/: Cargo.toml
create/coreui/src/: app.rs  executor.rs  lib.rs  lifecycle.rs  state.rs
create/polkadot/: Cargo.toml
create/polkadot/src/: client.rs  compose.rs  keys.rs  lib.rs
create/polkadot/src/rpc/: mod.rs  types.rs
create/utils/: Cargo.toml
create/utils/src/: aes.rs  lib.rs
doc/: README.md
uwallet/: Cargo.toml  index.html
uwallet/src/: app.rs  constants.rs  executor.rs  lib.rs  main.rs  navigation.rs
uwallet/src/activity/: common.rs  constants.rs  home.rs  interface.rs  mod.rs  password.rs  phrase.rs  setting.rs  splash.rs  template.rs  transfer.rs  welcome.rs  widget.rs
uwallet/src/view/: common.rs  mod.rs  state.rs
