[package]
name = "uwallet"
version = "0.1.0"
authors = ["Abel"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit", # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }

egui-modal = "0.2.2"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# crypto
anyhow = "1.0.53"
tiny-bip39 = "1.0.0"
polkadot = { path = "../create/polkadot" }
utils = { path = "../create/utils" }
coreui = { path = "../create/coreui" }

tokio = { version = "1.26.0", features = ["full"] }
poll-promise = { version = "0.2.0" }
log = "0.4.17"
env_logger = "0.10.0"

parking_lot = "0.12"
image = { version = "0.24.1" }

codec = { package = 'parity-scale-codec', version = "3.1.5", default-features = false, features = ['derive'] }



# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


#[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
