[package]
name = "coreui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#core
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit", # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }

egui-modal = "0.2.2"

# other
log = "0.4.17"
anyhow = "1.0.53"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.68"
once_cell = "1.17.1"